# gl_glad_template

./: CMakeLists.txt  README.org  copy_to_project.sh  main.cpp
